# PaperDB

./: .gitignore  Cargo.toml  README.md  read.py
data/: items.paperdb
paperdb-build/: Cargo.toml
paperdb-build/src/: db.rs  error.rs  lib.rs  main.rs  model.rs
paperdb-core/: Cargo.toml
paperdb-core/src/: lib.rs
paperdb-py/: Cargo.toml
paperdb-py/src/: lib.rs
